--- a/applications.html
+++ b/applications.html
@@ -153,7 +153,7 @@
     <section id="board" class="app-panel">
       <div class="panel-head">
         <span class="panel-eyebrow">Standards</span>
-        <h2 class="panel-title">Board of Traders Application</h2>
+        <h2 class="panel-title">Committee of Traders Application</h2>
       </div>
       <div class="panel-body">
         <div class="desc">
