--- a/events.html
+++ b/events.html
@@ -13,27 +13,35 @@
   <meta property="og:image" content="assets/images/osu-daytraders-logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Page-scoped polish, aligned with site -->
+  <!-- Page-scoped polish, matching site style -->
   <style>
     :root{
       --scarlet:#c4122f; --ink:#121212; --muted:#646464; --panel:#fff; --surface:#f6f6f6;
+      --pill:#f6f7fb;
     }
     body{background:var(--surface)}
+    /* normalize this page's h1 to match the rest */
+    .calendar-wrap h1{color:var(--ink)}
 
     .calendar-wrap{max-width:1100px;margin:0 auto;padding:1.5rem 1rem 3rem}
     .cal-header{display:flex;align-items:center;justify-content:space-between;gap:1rem;margin:.25rem auto 1.2rem;max-width:980px}
-    .cal-title{font-size:1.75rem;font-weight:900;margin:0;color:var(--ink)}
+    .cal-title{font-size:1.75rem;font-weight:900;margin:0}
     .cal-controls{display:flex;gap:.5rem}
     .cal-btn{border:1px solid #e8e8e8;background:#fff;border-radius:999px;padding:.55rem .85rem;font-weight:800;cursor:pointer;box-shadow:0 10px 24px rgba(0,0,0,.06)}
     .cal-btn:hover{filter:brightness(.97)}
     .cal-btn:active{transform:translateY(1px)}
 
     .calendar{--gap:.65rem;display:grid;gap:var(--gap);grid-template-columns:repeat(7,1fr);max-width:980px;margin:0 auto}
-    .cal-dow{font-size:.8rem;color:#777;font-weight:900;text-transform:uppercase;letter-spacing:.08em;padding:.35rem 0}
+    /* weekday row in scarlet */
+    .cal-dow{
+      font-size:.78rem;font-weight:900;text-transform:uppercase;letter-spacing:.08em;
+      color:#fff;background:var(--scarlet);border-radius:12px;text-align:center;padding:.5rem .4rem;
+      box-shadow:0 10px 24px rgba(196,18,47,.18);
+    }
 
     .cal-cell{
       background:linear-gradient(180deg,#ffffff,#fbfbfb);
-      border:1px solid #eee;border-radius:18px;min-height:120px;padding:.75rem;
+      border:1px solid #eee;border-radius:18px;min-height:122px;padding:.65rem .65rem .7rem;
       display:flex;flex-direction:column;gap:.45rem;box-shadow:0 16px 38px rgba(0,0,0,.06);
       transition:transform .12s ease, box-shadow .12s ease;
     }
@@ -41,23 +49,28 @@
     .cal-cell.muted{opacity:.45}
     .cal-date{font-weight:900;font-size:.95rem;color:#333}
 
-    .pill{
-      display:block;border-radius:12px;padding:.5rem .6rem;border:1px solid #eee;background:#fafbff;
-      font-size:.86rem;line-height:1.25;position:relative;
+    /* event bar, red-themed like your example */
+    .event-bar{
+      display:block;width:100%;
+      background:var(--scarlet); color:#fff; border:0; border-radius:12px;
+      padding:.5rem .6rem; line-height:1.25; font-size:.88rem; font-weight:800;
+      box-shadow:0 10px 26px rgba(196,18,47,.25);
+      position:relative;
     }
-    .pill:before{
-      content:""; position:absolute; left:6px; top:10px; width:8px; height:8px; border-radius:999px; background:var(--scarlet);
+    .event-bar + .event-bar{margin-top:.35rem}
+    .event-bar small{
+      display:block; margin-top:.15rem; font-weight:700; opacity:.95; letter-spacing:.01em;
     }
-    .pill strong{display:block;font-weight:900;padding-left:14px}
-    .pill small{color:#666;padding-left:14px}
-    .pill + .pill{margin-top:.4rem}
-
+    .event-dot{
+      position:absolute; left:.48rem; top:.6rem; width:.5rem; height:.5rem; border-radius:999px;
+      background:#fff; opacity:.9;
+    }
     .legend{max-width:980px;margin:1.1rem auto 0;color:#666;font-size:.92rem}
 
     /* Drawer (bottom sheet) */
     .drawer{position:fixed;inset:auto 0 0 0;max-height:66vh;background:#fff;border-top:1px solid #eee;box-shadow:0 -28px 80px rgba(0,0,0,.2);transform:translateY(100%);transition:transform .18s ease;z-index:40}
     .drawer.show{transform:translateY(0)}
-    .drawer-head{display:flex;align-items:center;justify-content:space-between;padding:1rem;border-bottom:1px solid #eee;background:#fff}
+    .drawer-head{display:flex;align-items:center;justify-content:space-between;padding:1rem;border-bottom:1px solid #eee}
     .drawer-title{margin:0;font-size:1.05rem;font-weight:900}
     .drawer-body{padding:1rem;display:grid;gap:.85rem;max-height:52vh;overflow:auto;background:linear-gradient(180deg,#fff,#fafafa)}
     .card{border:1px solid #eee;border-radius:16px;padding:.95rem;background:#fff;box-shadow:0 12px 26px rgba(0,0,0,.07)}
@@ -68,12 +81,10 @@
     .btn{display:inline-block;text-decoration:none;font-weight:900;padding:.72rem 1rem;border-radius:999px;border:1px solid #111;background:#111;color:#fff}
     .btn--light{background:#fff;color:#111;border:1px solid #ddd}
     .btn--scarlet{background:var(--scarlet);border-color:var(--scarlet);color:#fff}
-    .link{color:#0a66c2;font-weight:800;text-decoration:none}
-    .link:hover{text-decoration:underline}
 
     @media (max-width:760px){
       .cal-cell{min-height:92px}
-      .pill strong{font-size:.88rem}
+      .event-bar{font-size:.86rem}
     }
   </style>
 </head>
@@ -137,22 +148,20 @@
     document.getElementById('year').textContent = new Date().getFullYear();
 
     // ====== EVENT DATA ======
-    // Meeting on the 17th of the CURRENT month at 6:00 PM ET.
-    // Change the hour/min if you need to; it auto-picks the right month/year.
+    // Meeting on the 17th of the current month at 6:00 PM ET
     const today = new Date();
-    const MEETING = {
+    const ONE_OFF_EVENTS = [{
       name: "Weekly Meeting",
       type: "Club Meeting",
-      start: new Date(today.getFullYear(), today.getMonth(), 17, 18, 0), // 17th @ 6:00 PM
+      start: new Date(today.getFullYear(), today.getMonth(), 17, 18, 0),
       duration: 75,
       location: "Hitchcock Hall, Room 131",
       zoom: "https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg",
       description: "Market rundown, risk review, and a breakout scalp workflow."
-    };
-    const ONE_OFF_EVENTS = [MEETING];
+    }];
 
-    // If you want recurring items later, add to RECUR_RULES (kept off for now).
-    const RECUR_RULES = [ /* see earlier example if needed */ ];
+    // Optionally add recurring rules later
+    const RECUR_RULES = [];
 
     // ====== Utilities ======
     const DOW = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];
@@ -162,17 +171,15 @@
     function endOfMonth(d){ return new Date(d.getFullYear(), d.getMonth()+1, 0); }
     function addDays(d, n){ const x = new Date(d); x.setDate(x.getDate()+n); return x; }
     function formatTime(d){ return d.toLocaleTimeString([], {hour: "numeric", minute: "2-digit"}); }
-
-    function googleCalLink(ev){
-      const start = ev.start;
-      const end = new Date(start.getTime() + (ev.duration||60)*60000);
+    function gcal(ev){
+      const end = new Date(ev.start.getTime() + (ev.duration||60)*60000);
       const fmt = d => `${d.getFullYear()}${pad(d.getMonth()+1)}${pad(d.getDate())}T${pad(d.getHours())}${pad(d.getMinutes())}00`;
       const qs = new URLSearchParams({
-        action: "TEMPLATE",
+        action:"TEMPLATE",
         text: ev.name,
-        details: `${ev.type ? ev.type+" — " : ""}${ev.description||""}\n${ev.zoom ? "Zoom: "+ev.zoom : ""}`,
+        details: `${ev.type?ev.type+" — ":""}${ev.description||""}\n${ev.zoom?"Zoom: "+ev.zoom:""}`,
         location: ev.location || "TBD",
-        dates: `${fmt(start)}/${fmt(end)}`
+        dates: `${fmt(ev.start)}/${fmt(end)}`
       });
       return `https://calendar.google.com/calendar/render?${qs.toString()}`;
     }
@@ -183,7 +190,6 @@
       const date = 1 + delta + (nth-1)*7;
       return new Date(year, monthIndex, date);
     }
-
     function expandRecurring(rules, from, to){
       const out = [];
       for (const r of rules){
@@ -221,13 +227,13 @@
     document.getElementById("closeDrawer").onclick = () => drawer.classList.remove("show");
 
     let view = new Date(today.getFullYear(), today.getMonth(), 1); // current month
-
     document.getElementById("prevBtn").onclick = ()=>{ view = new Date(view.getFullYear(), view.getMonth()-1, 1); render(); };
     document.getElementById("nextBtn").onclick = ()=>{ view = new Date(view.getFullYear(), view.getMonth()+1, 1); render(); };
     document.getElementById("todayBtn").onclick = ()=>{ view = new Date(today.getFullYear(), today.getMonth(), 1); render(); };
 
     function render(){
       cal.innerHTML = "";
+      // weekday header
       for (const d of DOW){
         const h = document.createElement("div");
         h.className = "cal-dow";
@@ -235,6 +241,7 @@
         cal.appendChild(h);
       }
 
+      // month grid
       const start = startOfMonth(view);
       const end = endOfMonth(view);
       const lead = (start.getDay()+7)%7;
@@ -266,19 +273,23 @@
         dateEl.textContent = d.getDate();
         cell.appendChild(dateEl);
 
-        const k = toKey(d);
-        const dayEvents = index[k] || [];
+        const key = toKey(d);
+        const dayEvents = index[key] || [];
         for (const ev of dayEvents){
-          const pill = document.createElement("a");
-          pill.href = "#";
-          pill.className = "pill";
-          pill.innerHTML = `<strong>${ev.name}</strong><small>${formatTime(ev.start)} ET • ${ev.location || "TBD"}</small>`;
-          pill.addEventListener("click", (e)=>{ e.preventDefault(); openDrawer(d, dayEvents); });
-          cell.appendChild(pill);
+          const bar = document.createElement("a");
+          bar.href = "#";
+          bar.className = "event-bar";
+          bar.innerHTML = `
+            <span class="event-dot" aria-hidden="true"></span>
+            ${ev.name}
+            <small>${formatTime(ev.start)} ET • ${ev.location || "TBD"}</small>
+          `;
+          bar.addEventListener("click", (e)=>{ e.preventDefault(); openDrawer(d, dayEvents); });
+          cell.appendChild(bar);
         }
 
         cell.addEventListener("click", (e)=>{
-          if (e.target.closest(".pill")) return;
+          if (e.target.closest(".event-bar")) return;
           openDrawer(d, dayEvents);
         });
 
@@ -287,7 +298,8 @@
     }
 
     function openDrawer(date, events){
-      drawerTitle.textContent = date.toLocaleDateString(undefined,{weekday:"long", month:"long", day:"numeric", year:"numeric"});
+      drawerTitle.textContent = date
+        .toLocaleDateString(undefined,{weekday:"long", month:"long", day:"numeric", year:"numeric"});
       drawerBody.innerHTML = "";
       if (!events.length){
         const empty = document.createElement("div");
@@ -302,9 +314,9 @@
             <h4>${ev.name}</h4>
             <div class="meta">${ev.type || "Event"} • ${formatTime(ev.start)} ET • ${ev.location || "TBD"}</div>
             ${ev.description ? `<p class="desc">${ev.description}</p>` : ""}
-            ${ev.zoom ? `<p class="desc">Zoom: <a class="link" href="${ev.zoom}" target="_blank" rel="noopener">Registration link</a></p>` : ""}
+            ${ev.zoom ? `<p class="desc">Zoom: <a class="btn btn--light" href="${ev.zoom}" target="_blank" rel="noopener">Registration link</a></p>` : ""}
             <div class="actions">
-              <a class="btn btn--scarlet" href="${googleCalLink(ev)}" target="_blank" rel="noopener">Add to Google Calendar</a>
+              <a class="btn btn--scarlet" href="${gcal(ev)}" target="_blank" rel="noopener">Add to Google Calendar</a>
               <a class="btn btn--light" href="applications.html#member">Join the club</a>
             </div>
           `;
